--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -56,7 +56,7 @@
                 <div class="submenu-container">
                     <div class="submenu-row sub-items">
                         <div class="submenu-itens">
-                            <a href="#" class="help">Help</a>
+                            <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/contact" class="help">Help</a>
 
                             
                             <div class="lang">
@@ -14353,15 +14353,16 @@ More information and complete integration, you can find in the link: https://dev
 
 
             <div class="footer-conteudo">
-                <div id="footer-conteudo-img" class="col-lg-1 col-md-1">
-                    <img src="/en/assets/images/icon-doubt.svg" width="55px" height="53px" alt="Precisa de ajuda?">
-                </div>
+    <div id="footer-conteudo-img" class="col-lg-1 col-md-1">
+            <img src="/en/assets/images/icon-doubt.svg" width="55px" height="53px" alt="Need Help?">
+    </div>
 
-                <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
-                    <h2>Precisa de ajuda?</h2>
-                    <p>Se você não conseguiu encontrar sua resposta acima, <a href="#">entre em contato conosco</a> ou <a href="#">consulte nosso FAQ.</a></p>
-                </div>
-            </div>
+    <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
+        <h2>Need Help?</h2>
+        <p>If you didn't find your answer, <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/contact">send us a message</a>.</p>
+    </div>
+</div>
+
         </div>
 
         <div class="sidebar">
