--- a/tutorial/habilitacao-meios-de-pagamento.html
+++ b/tutorial/habilitacao-meios-de-pagamento.html
@@ -45,7 +45,7 @@
                 <div class="submenu-container">
                     <div class="submenu-row sub-items">
                         <div class="submenu-itens">
-                            <a href="#" class="help">Ajuda</a>
+                            <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/contact" class="help">Ajuda</a>
 
                             
                         </div>
@@ -344,15 +344,16 @@ O Comprador acessará via a loja o Ambiente do Banco e realizará uma transferê
 
 
             <div class="footer-conteudo">
-                <div id="footer-conteudo-img" class="col-lg-1 col-md-1">
-                    <img src="/assets/images/icon-doubt.svg" width="55px" height="53px" alt="Precisa de ajuda?">
-                </div>
+    <div id="footer-conteudo-img" class="col-lg-1 col-md-1">
+            <img src="/assets/images/icon-doubt.svg" width="55px" height="53px" alt="Precisa de ajuda?">
+    </div>
 
-                <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
-                    <h2>Precisa de ajuda?</h2>
-                    <p>Se você não conseguiu encontrar sua resposta acima, <a href="#">entre em contato conosco</a> ou <a href="#">consulte nosso FAQ.</a></p>
-                </div>
-            </div>
+    <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
+        <h2>Precisa de ajuda?</h2>
+        <p>Se você não conseguiu encontrar sua resposta acima, <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/contact">entre em contato conosco</a>.</p>
+    </div>
+</div>
+
         </div>
 
         <div class="sidebar">
