--- a/en/index.html
+++ b/en/index.html
@@ -95,14 +95,16 @@
 
 <div class="home-footer">
     <div class="footer-conteudo">
-        <div id="footer-conteudo-img" class="col-lg-1 col-md-1">
-            <img src="/en/assets/images/icon-doubt.svg" width="55px" height="53px" alt="Precisa de ajuda?">
-        </div>
-        <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
-            <h2>Precisa de ajuda?</h2>
-            <p>Se você não conseguiu encontrar sua resposta acima, <a href="#">entre em contato conosco</a> ou <a href="#">consulte nosso FAQ.</a></p>
-        </div>
+    <div id="footer-conteudo-img" class="col-lg-1 col-md-1">
+            <img src="/en/assets/images/icon-doubt.svg" width="55px" height="53px" alt="Need Help?">
     </div>
+
+    <div id="footer-conteudo-texto" class="col-lg-11 col-md-11">
+        <h2>Need Help?</h2>
+        <p>If you didn't find your answer, <a href="https://desenvolvedores.cielo.com.br/api-portal/pt-br/contact">send us a message</a>.</p>
+    </div>
+</div>
+
 </div>
 
     </div>
