--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -187,15 +187,163 @@
   <li>Pagamento com NFC (LIO V2)</li>
 </ul>
 
-<h1 id="desenvolva-um-app">Desenvolva um APP</h1>
+<h3 id="diferenças-lio-v1-e-lio-v2">Diferenças LIO V1 e LIO V2</h3>
 
-<h1 id="integração-remota">Integração remota</h1>
+<p>A Cielo LIO V2, foi um hardware também desenvolvido pela Cielo pensando em atender as necessidades específicas de alguns clientes.</p>
 
-<h1 id="integração-local">Integração Local</h1>
+<p>A LIO V2 foi concebida com um tamanho maior do que a LIO V1 e com isso leva aos nossos clientes um design recomendado para utilização em balcões de forma mais estática e com algumas funcionalidades adicionais à LIO V1.</p>
 
-<h1 id="cielo-store">Cielo Store</h1>
+<h3 id="funcionalidades-exclusivas-lio-v2">Funcionalidades exclusivas LIO V2</h3>
 
-<h1 id="referências">Referências</h1>
+<p>A LIO V2 possui todas as funcionalidades presentes na LIO V1 e também:</p>
+
+<p>Impressora térmica
+Com a LIO V2, o cliente poderá ter a 1ª e 2ª via impressa após o pagamento realizado. Além disso, as aplicações parceiras poderão utilizar os métodos disponíveis da impressora para imprimir dados importantes ou necessários para o negócio do cliente.
+NFC
+Na LIO V2 colocamos o NFC como uma outra alternativa de pagamento. Portanto pagamentos poderão ser feitos utilizando cartão ou via contactless.</p>
+
+<h3 id="serviços-periféricos">Serviços periféricos</h3>
+
+<p>A Cielo LIO também se integra com os seguintes periféricos de hardware:</p>
+
+<p>Impressoras Bluetooth (normalmente utilizadas para realizar a impressão de recibos).
+Já existem parceiros que estão utilizando impressoras Bluetooth das marcas Zebra, Datex, Leopardo e outras para se Integrar com a Cielo LIO!
+Todos os protocolos de comunicação e pareamento ficam sob responsabilidade do aplicativo do parceiro.</p>
+
+<h3 id="guia-para-desenvolvedores">Guia para desenvolvedores</h3>
+
+<p>O guia abaixo fornece as informações necessárias para ajudar os desenvolvedores a integrar ou desenvolver seus aplicativos na plataforma Cielo LIO da melhor maneira possível, de modo a oferecer uma experiência excelente para os estabelecimentos comerciais.</p>
+
+<h3 id="hardware">Hardware</h3>
+
+<p>A Cielo oferece a plataforma Cielo LIO com o próprio software baseado em Android..</p>
+
+<p>Confira abaixo a tabela com as especificações técnicas da Cielo LIO:
+<strong>Especificações Técnicas</strong>
+| Versão               | LIO v1                                      | LIO v2                                      |
+|———————-|———————————————|———————————————|
+| Sistema operacional  | Android OS Cielo 5.1.1                      | Android OS Cielo 6.0 (Marshmallow)          |
+| Memória              | 2GB LPDDR3                                  | 1GB LPDDR3                                  |
+| Dual Chip            | Dual SIM Stand-by                           | Dual SIM Stand-by                           |
+| Tipo do SIM Card     | micro SIM (3FF)                             | micro SIM (3FF)                             |
+| Frequência GSM Mhz   | Quad-Band 850/900/1800/1900                 | Quad Band 850/900/1800/1900                 |
+| Tamanho em polegadas | 5”                                          | 5.5”                                        |
+| Tipo de tela         | AMOLED                                      | AMOLED                                      |
+| Resolução da tela    | 720 x 1280 pixels                           | 720 x 1280 pixels                           |
+| Densidade de pixels  | 293 ppi                                     | 267 ppi                                     |
+| Câmera               | 12,8 Mega Pixels                            | 13 Mega Pixels                              |
+| Resolução da câmera  | 4128 x 3096 pixels                          | 4160 x 3120 pixels                          |
+| Flash                | Flash LED                                   | Flash LED                                   |
+| USB                  | USB 2.0 Micro-B (Micro-USB) Somente Energia | USB 2.0 Micro-B (Micro-USB) Somente Energia |
+| Bluetooth            | Versão 4.0 com A2DP                         | Versão 4.0 com A2DP/LE                      |
+| WiFi           | 802.11 a/b/g/n                           | 802.11 b/g/n                             |
+| Memória        | 2GB LPDDR3                               | 1GB LPDDR3                               |
+| GPS            | A-GPS, GeoTagging                        | A-GPS                                    |
+| Sensores       | Acelerômetro, Proximidade e Luminosidade | Acelerômetro, Proximidade e Luminosidade |
+| Saída de áudio | Audio Jack 3,5mm                         | Audio Jack 3,5mm                         |</p>
+
+<h3 id="práticas-gerais-recomendadas">Práticas gerais recomendadas</h3>
+
+<ul>
+  <li>Crie uma conta no Portal de Desenvolvedores e acesse a documentação de acordo com a necessidade do seu desenvolvimento de integração com a plataforma da Cielo LIO.</li>
+  <li>Se estiver desenvolvendo um aplicativo para a Cielo LIO, ao término do desenvolvimento e/ou integração com o SDK Order Manager, crie uma conta na Cielo Store para submeter seu apk para certificação e, na sequência, disponibilizá-lo na Cielo LIO. Leia e aceite nossos Termos de Uso para fazer o envio do seu aplicativo.</li>
+  <li>O aplicativo deve atender às necessidades dos estabelecimentos comerciais da Cielo.</li>
+  <li>Teste completamente seu aplicativo antes da submissão. Aplicativos que não funcionam como esperado serão rejeitados na etapa de certificação.</li>
+  <li>Certifique-se de que todos os dados gerados externamente e todas as operações estão sendo realizadas corretamente com a plataforma Cielo LIO.</li>
+  <li>Seu aplicativo deve ter uma boa experiência de ponta a ponta. Aplicativos que não têm uma quantidade significativa e razoável de funcionalidade podem ser rejeitados durante o processo de revisão.</li>
+  <li>O aplicativo em produção deve se autenticar com a Cielo LIO utilizando os tokens de acesso (Client-Id e Access-Tokens), ambos gerados no Portal de Desenvolvedores.</li>
+</ul>
+
+<h3 id="uso-da-api">Uso da API</h3>
+
+<p><strong>Segurança</strong></p>
+
+<p>Proteja os dados confidenciais de clientes e funcionários. Não exponha publicamente nomes, endereços ou números de telefone.
+Nunca exponha tokens de autenticação ou senhas de qualquer tipo.</p>
+
+<p><strong>Rate Limiting</strong></p>
+
+<p>As solicitações da Automação Comercial ou PDV devem ser escalonadas o máximo possível para evitar rajadas de alto volume de tráfego.
+“Cache” seus próprios dados quando você precisar armazenar valores especializados ou revisar rapidamente conjuntos de dados muito grandes.</p>
+
+<p><strong>Melhores práticas</strong></p>
+
+<p>Não crie multithread com chamadas POST, pois esse comportamento pode criar atrasos sistêmicos devido a deadlocks.
+Minimize o uso de dados. Os comerciantes podem estar utilizando conexão com dados móveis limitados.</p>
+
+<h3 id="android-cielo-os">Android (Cielo OS)</h3>
+
+<p><strong>Melhores práticas</strong></p>
+
+<ul>
+  <li>Recomendamos aos desenvolvedores que integrem algum tipo de utilitário de relatório de falhas em seus produtos Android. Isso ajudará você a manter a consciência operacional do seu produto.</li>
+  <li>Os desenvolvedores podem coletar métricas sobre o uso do seu aplicativo. Isso irá ajudá-los a construir melhores produtos e aumentar a conscientização a respeito de quaisquer questões impactantes.</li>
+</ul>
+
+<p><strong>Código de Qualidade</strong></p>
+
+<p>Seu aplicativo deve estar em conformidade com as práticas de programação Java e Android convencionais:</p>
+
+<ul>
+  <li>Diretrizes para desenvolvedores do Android.</li>
+  <li>Princípios de Design Orientado a Objetos (S.O.L.I.D.).</li>
+  <li>Diretrizes de estilo Java.</li>
+  <li>Entenda a diferença entre compileSdkVersion, targetSdkVersion, e minSdkVersion.</li>
+  <li>Aproveite os botões nativos do Android, como os botões “Voltar” e “Início”.</li>
+</ul>
+
+<p><strong>Rotações do dispositivo</strong>
+O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado.</p>
+
+<p>Pode ser utilizado o método setRequestedOrientation passando a orientação desejada para alterar a orientação, e o getRequestedOrientation() para obter a orientação atual da tela.</p>
+
+<h3 id="design">Design</h3>
+
+<p><strong>Recursos de imagem</strong></p>
+
+<ul>
+  <li>Os ícones dos aplicativos devem ser recursos do mipmap.</li>
+  <li>Os ícones devem estar em conformidade com o dimensionamento padrão do Android (você pode usar geradores de ícones de terceiros para redimensionar seu logotipo): 192 × 192 (xxxhdpi).</li>
+</ul>
+
+<p><strong>Design gráfico</strong></p>
+
+<p>Se o seu aplicativo incluir um componente voltado para o cliente, seu projeto refletirá sobre o negócio usando seu aplicativo. Essas interfaces devem ser agradáveis e profissionais.</p>
+
+<p><strong>Usabilidade</strong></p>
+
+<ul>
+  <li>Seu aplicativo será usado em condições de trabalho de ritmo rápido e dinâmico. Esforce-se para obter fluxos de trabalho claros, fáceis de usar e robustos, com o mínimo de passos possível.</li>
+  <li>O design deve enfatizar clareza e acessibilidade – alto contraste, fontes legíveis, texto grande e entradas.</li>
+  <li>Se você estiver adaptando um aplicativo desenvolvido para outra plataforma, verifique se ele só inclui recursos e botões relevantes para o usuário da Cielo LIO.</li>
+</ul>
+
+<h3 id="publicação">Publicação</h3>
+
+<table>
+  <tbody>
+    <tr>
+      <td>**Detalhes da aplicação</td>
+      <td>Envio para certificação**</td>
+    </tr>
+  </tbody>
+</table>
+
+<p>As seguintes informações são necessárias no momento de enviar seu aplicativo para certificação:</p>
+
+<ul>
+  <li>Uma descrição clara e detalhada da finalidade do app.</li>
+  <li>Uma listagem com as funcionalidades do app.</li>
+  <li>As funções do SDK utilizadas e as APIs utilizadas pelo app.</li>
+  <li>Possíveis casos de uso da aplicação.</li>
+  <li>Alterações relativas à última versão.</li>
+  <li>Dados para acesso. Por exemplo: login e senha relevantes. Caso seja necessário, descreva outro hardware ou os recursos necessários para analisar seu aplicativo.</li>
+  <li>Versão do SDK utilizada.</li>
+  <li>Versão Cielo OS utilizada.</li>
+  <li>Screenshots das telas do app.</li>
+</ul>
+
+<p>Certifique-se de que seu aplicativo não infringe os direitos de propriedade intelectual de terceiros, incluindo a marca Cielo, por exemplo. Não use Cielo ou qualquer outra marca registrada no nome do seu aplicativo para implicar a propriedade ou incluir a marca Cielo no domínio do seu site de ajuda.</p>
 
 </div>
 
