--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -406,14 +406,7 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <h3 id="publicação">Publicação</h3>
 
-<table>
-  <tbody>
-    <tr>
-      <td>**Detalhes da aplicação</td>
-      <td>Envio para certificação**</td>
-    </tr>
-  </tbody>
-</table>
+<p><strong>Detalhes da aplicação - Envio para certificação</strong></p>
 
 <p>As seguintes informações são necessárias no momento de enviar seu aplicativo para certificação:</p>
 
