--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -131,6 +131,8 @@
 
 <p>Caso você deseje ser cliente Cielo e possuir uma de nossas soluções de pagamento, acesse https://www.cielo.com.br/seja-nosso-cliente/ e escolha a solução ideal para você vender muito mais.</p>
 
+<h1 id="visão-geral-da-plataforma">Visão Geral da Plataforma</h1>
+
 <h2 id="arquitetura">Arquitetura</h2>
 
 <p>A plataforma Cielo LIO consiste em:</p>
