--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -151,25 +151,11 @@
 
 <h3 id="modelos-de-integração-com-a-plataforma-cielo-lio">Modelos de integração com a plataforma Cielo LIO</h3>
 
-<table>
-  <tbody>
-    <tr>
-      <td>**Integração Remota</td>
-      <td>Cielo LIO Order Manager**</td>
-    </tr>
-  </tbody>
-</table>
+<p><strong>Integração Remota - Cielo LIO Order Manager</strong></p>
 
 <p>Conjunto de APIs que permitem que o cliente continue utilizando sua solução de PDV/Automação Comercial com todas as funcionalidades. No momento de realizar o pagamento, ocorre a integração com o gerenciador de pedidos (Order Manager) da Cielo LIO, de forma rápida, simples e segura.</p>
 
-<table>
-  <tbody>
-    <tr>
-      <td>**Integração Local</td>
-      <td>Cielo LIO Order Manager SDK**</td>
-    </tr>
-  </tbody>
-</table>
+<p><strong>Integração Local - Cielo LIO Order Manager SDK</strong></p>
 
 <p>A Cielo disponibiliza um SDK com base na Cielo LIO Order Manager API que permite ao desenvolvedor e parceiro Cielo LIO integrar em sua aplicação as funcionalidades de pagamento do Order Manager da Cielo LIO</p>
 
