--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -412,6 +412,8 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <p>Certifique-se de que seu aplicativo não infringe os direitos de propriedade intelectual de terceiros, incluindo a marca Cielo, por exemplo. Não use Cielo ou qualquer outra marca registrada no nome do seu aplicativo para implicar a propriedade ou incluir a marca Cielo no domínio do seu site de ajuda.</p>
 
+<h1 id="integração-remota">Integração Remota</h1>
+
 </div>
 
 
