--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -414,6 +414,22 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <h1 id="integração-remota">Integração Remota</h1>
 
+<h1 id="integração-local">Integração Local</h1>
+
+<h2 id="apresentação">Apresentação</h2>
+
+<p>O objetivo da Integração Local da Cielo LIO é permitir que o aplicativo desenvolvido em Android se integre com o módulo de pedidos e pagamentos da Cielo LIO através do Cielo LIO Order Manager SDK.</p>
+
+<p>Nesse modelo de integração, toda a gestão do estabelecimento comercial e da arquitetura da solução fica sob responsabilidade do aplicativo que irá utilizar o SDK nas operações de pagamento.</p>
+
+<center>![modelo de integração](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/diagrama-apresentacao-images.png)</center>
+
+<ul>
+  <li>O aplicativo do parceiro rodando na Cielo envia informações para o Cielo LIO Order Manager SDK.</li>
+  <li>O Cielo LIO Order Manager SDK executa os fluxos para pagamento.</li>
+  <li>O aplicativo do parceiro recebe as informações do pagamento e continua sua execução.</li>
+</ul>
+
 </div>
 
 
