--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -185,9 +185,10 @@
 
 <p>A LIO V2 possui todas as funcionalidades presentes na LIO V1 e também:</p>
 
-<p>Impressora térmica
-Com a LIO V2, o cliente poderá ter a 1ª e 2ª via impressa após o pagamento realizado. Além disso, as aplicações parceiras poderão utilizar os métodos disponíveis da impressora para imprimir dados importantes ou necessários para o negócio do cliente.
-NFC
+<p><strong>Impressora térmica</strong>
+Com a LIO V2, o cliente poderá ter a 1ª e 2ª via impressa após o pagamento realizado. Além disso, as aplicações parceiras poderão utilizar os métodos disponíveis da impressora para imprimir dados importantes ou necessários para o negócio do cliente.</p>
+
+<p><strong>NFC</strong>
 Na LIO V2 colocamos o NFC como uma outra alternativa de pagamento. Portanto pagamentos poderão ser feitos utilizando cartão ou via contactless.</p>
 
 <h3 id="serviços-periféricos">Serviços periféricos</h3>
