[9947794bd435ca9d9a232965f5672f0fed7907d3]: Corrige erro de formatação

--- a/manual/manual-teste-de-integração.html
+++ b/manual/manual-teste-de-integração.html
@@ -211,6 +211,39 @@ Evite criar varios topicos neste nivel para que o menu lateral não gere um Roll
 
 <aside class="request"><span class="method put">PUT</span> <span class="endpoint">/1/sales/</span></aside>
 
+<h2 id="destaque-de-textos">Destaque de TEXTOS</h2>
+
+<p>O novo layout contem os mesmo tipos de destque de texto providos nas versões anteriores,todos baseados em Markdown
+Abaixo alguns exemplos e indicações de Regras:</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Tipo</th>
+      <th>Descrição</th>
+      <th>OBS</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><strong>Markdown</strong></td>
+      <td>Este documento utiliza o Markdown baseado na versão GITHUB</td>
+      <td>XXXXXX</td>
+    </tr>
+    <tr>
+      <td><strong>Notice</strong></td>
+      <td>Este exemplo cria uma caixa de texto azul. Markdown não funciona em seu interior</td>
+      <td><code class="highlighter-rouge">&lt;aside class="request"&gt;&lt;span class="method get"&gt;GET&lt;/span&gt; &lt;span class="endpoint"&gt;/1/sales/&lt;/span&gt;&lt;/aside&gt;</code></td>
+    </tr>
+    <tr>
+      <td><strong>Warning</strong> Este exemplo cria uma caixa de texto Vermelha. Markdown não funciona em seu interior</td>
+      <td><code class="highlighter-rouge">&lt;aside class="request"&gt;&lt;span class="method put"&gt;PUT&lt;/span&gt; &lt;span class="endpoint"&gt;/1/sales/&lt;/span&gt;&lt;/aside&gt;</code></td>
+      <td> </td>
+    </tr>
+  </tbody>
+</table>
+
+
 </div>
 
 
