[7c77275e8c0b58fa15c21ff2624efd084b919ee7]: Add Integração Remota - Apresentação

--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -415,9 +415,24 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <h1 id="integração-remota">Integração Remota</h1>
 
+<h2 id="apresentação">Apresentação</h2>
+
+<p>O objetivo da Integração Remota da Cielo LIO é permitir que o lojista continue utilizando sua solução de frente de caixa (Automação Comercial ou PDV) e a integre com o módulo de pedidos e pagamentos da Cielo LIO através de uma API construída no padrão RESTful.</p>
+
+<p>Dessa forma, toda a gestão do estabelecimento comercial fica sob responsabilidade da Automação Comercial e, no momento de realizar o pagamento, a Cielo LIO é utilizada.</p>
+
+<p>imagem</p>
+
+<p>A API Order Manager da Cielo LIO possui as seguintes características:</p>
+
+<p>Recursos REST, de forma que seja possível acessar por meio de semântica HTTP padrão.
+Códigos de status HTTP para comunicar o sucesso/erro nas chamadas.
+Todas as requisições e respostas encontram-se no formato JSON.
+As seções abaixo possuem todas as informações necessárias para realizar a integração de forma rápida e segura.</p>
+
 <h1 id="integração-local">Integração Local</h1>
 
-<h2 id="apresentação">Apresentação</h2>
+<h2 id="apresentação-1">Apresentação</h2>
 
 <p>O objetivo da Integração Local da Cielo LIO é permitir que o aplicativo desenvolvido em Android se integre com o módulo de pedidos e pagamentos da Cielo LIO através do Cielo LIO Order Manager SDK.</p>
 
