[4ffeb83f0e3962f00f15890bb3e8300f71f1c2c7]: Updated '_i18n/pt/_posts/checkout/2000-01-01-Checkout-Tutoriais.md' via CloudCannon

--- a/tutorial/checkout-tutoriais.html
+++ b/tutorial/checkout-tutoriais.html
@@ -666,7 +666,7 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
   </thead>
   <tbody>
     <tr>
-      <td>**Específico **</td>
+      <td><strong>Específico</strong></td>
       <td>Cada botão gerado serve somente para um determinado produto ou grupo de produtos. A quantidade e volume de produtos vendido é definido no cadastro do Botão, não sendo possível altera a quantidade na tela transacional <br /><br /><strong>Exemplo:</strong> Será necessário criar Um botão para vender 1 camisa. Se o comprador desejar 2 camisas, ele precisará usar o botão 2X ou O lojista deverá criar um botão com 2 camisas</td>
     </tr>
     <tr>
@@ -698,7 +698,9 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
   <li><strong>Pagamentos</strong> - Pagamentos unicos ou transferência de valores Ex: quitação de dividas etc</li>
 </ul>
 
-<p><strong>Tela de Cadastro:</strong></p>
+<p><br /></p>
+
+<p><strong>Tela de Cadastro</strong></p>
 
 <p><img src="/images/Checkout/btcadastro.png" alt="Cadastro de Botão" /></p>
 
@@ -799,11 +801,11 @@ Esse tipo de integração é realizado via o cadastro de um conjunto de itens a 
   </tbody>
 </table>
 
-<p>Adicionando o botão na sua página, você deve copiar o código HTML do botão criado e inclui-lo no HTML de seu site, conforme o exemplo abaixo.</p>
+<p><strong>Adicionando o botão na sua página, você deve copiar o código HTML do botão criado e inclui-lo no HTML de seu site, conforme o exemplo abaixo.</strong></p>
 
 <aside class="notice">O código deve ser inserido dentro da área adequada no seu HTML.</aside>
 
-<p>Cada botão possui um código único que só permite comprar aquele determinado produto nas condições de preço e frete cadastrado. Portanto, um fraudador não consegue alterar nenhuma destas informações na hora de submeter a compra, pois o Checkout Cielo vai buscar todos os dados do produto no cadastro do <a href="http://developercielo.github.io/Checkout-Backoffice/">Backoffice Cielo Checkout</a>, e valerão os dados do cadastro.</p>
+<p>Cada botão possui um código único que só permite comprar aquele determinado produto nas condições de preço e frete cadastrado. Portanto, um fraudador não consegue alterar nenhuma destas informações na hora de submeter a compra, pois o Checkout Cielo vai buscar todos os dados do produto no cadastro do Backoffice Cielo Checkout, e valerão os dados do cadastro.</p>
 
 
 </div>
