[54ce77d7eaa2099255022a6193d4f7b4e28e6019]: Updated '_i18n/pt/_posts/checkout/2000-01-01-Checkout-Tutoriais.md' via CloudCannon

--- a/tutorial/checkout-tutoriais.html
+++ b/tutorial/checkout-tutoriais.html
@@ -221,11 +221,11 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p><img src="/images/Checkout/TutorialCheckout/checkout-cadastrar-link-de-pagamentos.png" alt="Cadastrar Link de pagamentos" /></p>
 
-<aside class="notice">Material Físico exige que um **tipo de frete** seja cadastrado. </aside>
+<aside class="notice">Material Físico exige que um tipo de frete seja cadastrado. </aside>
 
-<aside class="notice">O campo **“SoftDescriptor”** permite que lojista insira uma mensagem que será exibida na fatura do cartão de crédito do comprador. Essa funcionalidade é indicada para lojas que tem o nome fantasia muito diferente em relação a Razão social.</aside>
+<aside class="notice">O campo “SoftDescriptor” permite que lojista insira uma mensagem que será exibida na fatura do cartão de crédito do comprador. Essa funcionalidade é indicada para lojas que tem o nome fantasia muito diferente em relação a Razão social.</aside>
 
-<aside class="notice">A mensagem inclusa no campo **“SoftDescriptor”** deve ser limitada a *13 letras *e não pode conter espaços.</aside>
+<aside class="notice">A mensagem inclusa no campo “SoftDescriptor” deve ser limitada a *13 letras *e não pode conter espaços.</aside>
 
 <aside class="notice">O cadastro de produtos não é obrigatório para lojistas que utilizem a integração via carrinho</aside>
 
@@ -281,7 +281,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>Esse relatorio informa o valor de cada pedido assim como dados sobre o produto e o comprador. O relatorio somente informa dados dos pedidos considerados com status <strong>“PAGO”</strong>.</p>
 
-<aside class="notice">Pedidos realizados no **Modo de teste** não são apresentados nesse relatório, mesmo que estejam com o status **“PAGO”**</aside>
+<aside class="notice">Pedidos realizados no Modo de teste não são apresentados nesse relatório, mesmo que estejam com o status “PAGO”</aside>
 
 <p><img src="/images/Checkout/TutorialCheckout/checkout-relatorio-detalhado-vendas.png" alt="Relatório detalhado de vendas" /></p>
 
@@ -522,7 +522,7 @@ O Checkout Cielo considera 5 tipos de produtos: Material Físico, Digital, Servi
 
 <p>O Checkout Cielo permite parcelamento até 12 vezes sem juros. O numero de parcelas exibidas no transacional depende do valor minimo para parcelamento configurado pela Loja</p>
 
-<aside class="warning">**Sobre Autenticação de transações**: O checkbox obriga todos os cartões Visa e Master a serem direcionados ao ambiente bancário para validação de segurança,. Só deve ser ativado caso a Afiliação Cielo esteja preparada para realizar esse fluxo, caso contrario as transações serão negadas automaticamente</aside>
+<aside class="warning"><b>Sobre Autenticação de transações:</b> O checkbox obriga todos os cartões Visa e Master a serem direcionados ao ambiente bancário para validação de segurança,. Só deve ser ativado caso a Afiliação Cielo esteja preparada para realizar esse fluxo, caso contrario as transações serão negadas automaticamente</aside>
 
 <h3 id="antifraude-e-captura-automática">Antifraude e Captura Automática</h3>
 
