--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -421,14 +421,16 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <p>Dessa forma, toda a gestão do estabelecimento comercial fica sob responsabilidade da Automação Comercial e, no momento de realizar o pagamento, a Cielo LIO é utilizada.</p>
 
-<p>imagem</p>
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/diagrama-overview.jpg" alt="integração remota" /></p>
 
 <p>A API Order Manager da Cielo LIO possui as seguintes características:</p>
 
-<p>Recursos REST, de forma que seja possível acessar por meio de semântica HTTP padrão.
-Códigos de status HTTP para comunicar o sucesso/erro nas chamadas.
-Todas as requisições e respostas encontram-se no formato JSON.
-As seções abaixo possuem todas as informações necessárias para realizar a integração de forma rápida e segura.</p>
+<ul>
+  <li>Recursos REST, de forma que seja possível acessar por meio de semântica HTTP padrão.</li>
+  <li>Códigos de status HTTP para comunicar o sucesso/erro nas chamadas.</li>
+  <li>Todas as requisições e respostas encontram-se no formato JSON.</li>
+  <li>As seções abaixo possuem todas as informações necessárias para realizar a integração de forma rápida e segura.</li>
+</ul>
 
 <h1 id="integração-local">Integração Local</h1>
 
