[2b1e0445ae75293be7e675a2f3dc7e8b1d58fe98]: Updated '_i18n/pt/_posts/api-cielo/2003-03-03-FAQ-API-3.0.md' via CloudCannon

--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -432,6 +432,16 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
   <li>As seções abaixo possuem todas as informações necessárias para realizar a integração de forma rápida e segura.</li>
 </ul>
 
+<h2 id="vídeo-demo">Vídeo Demo</h2>
+
+<p>No vídeo abaixo é possível ver um exemplo de Automação Comercial integrada com a API Order Manager da Cielo LIO.</p>
+
+<p>[<img src="https://www.youtube.com/watch?v=QxfTkJEN1Qs" alt="Vídeo Demo" />]</p>
+
+<h3 id="code-sample">Code Sample</h3>
+
+<p>O código do exemplo da Automação Comercial integrada com a API Order Manager da Cielo LIO encontra-se disponível no <a href="https://github.com/cielolabsbr/SampleAutomacaoComercial1.2">GitHub</a>.</p>
+
 <h1 id="integração-local">Integração Local</h1>
 
 <h2 id="apresentação-1">Apresentação</h2>
@@ -452,7 +462,7 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <hr />
 
-<h2 id="vídeo-demo">Vídeo Demo</h2>
+<h2 id="vídeo-demo-1">Vídeo Demo</h2>
 
 <p>No vídeo abaixo, é possível ver um exemplo de aplicativo integrado com o Cielo LIO Order Manager SDK, utilizando a função de pagamento de valores do SDK.</p>
 
@@ -460,7 +470,7 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <p>Clique na imagem acima, para acessar o vídeo</p>
 
-<h2 id="code-sample">Code Sample</h2>
+<h2 id="code-sample-1">Code Sample</h2>
 
 <p>O código do exemplo do aplicativo integrado com o Cielo LIO Order Manager SDK encontra-se disponível no GitHub.</p>
 
