[74e413e1be1cb1b02747940ed5e0a0c2214c3dc6]: Updated '_i18n/pt/_posts/api-cielo/2003-03-03-FAQ-API-3.0.md' via CloudCannon

--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -440,7 +440,7 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <h3 id="code-sample">Code Sample</h3>
 
-<p>O código do exemplo da Automação Comercial integrada com a API Order Manager da Cielo LIO encontra-se disponível no <a href="https://github.com/cielolabsbr/SampleAutomacaoComercial1.2">GitHub</a>.</p>
+<p>O código do exemplo da Automação Comercial integrada com a API Order Manager da Cielo LIO encontra-se disponível no <a href="https://github.com/cielolabsbr/SampleAutomacaoComercial1.2">GitHub</a>. testes</p>
 
 <h1 id="integração-local">Integração Local</h1>
 
