[c6a4a9f6a76247e5c9e9f0222b4054fcbcd4a15f]: Fix Video Demo - Integração Remota

--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -436,11 +436,13 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <p>No vídeo abaixo é possível ver um exemplo de Automação Comercial integrada com a API Order Manager da Cielo LIO.</p>
 
-<p>[<img src="https://www.youtube.com/watch?v=QxfTkJEN1Qs" alt="Vídeo Demo" />]</p>
+<p><a href="https://www.youtube.com/watch?v=QxfTkJEN1Qs"><img src="https://img.youtube.com/vi/QxfTkJEN1Qs/0.jpg" alt="Vídeo Demo" /></a></p>
+
+<p>Clique na imagem acima, para acessar o vídeo.</p>
 
 <h3 id="code-sample">Code Sample</h3>
 
-<p>O código do exemplo da Automação Comercial integrada com a API Order Manager da Cielo LIO encontra-se disponível no <a href="https://github.com/cielolabsbr/SampleAutomacaoComercial1.2">GitHub</a>. testes</p>
+<p>O código do exemplo da Automação Comercial integrada com a API Order Manager da Cielo LIO encontra-se disponível no <a href="https://github.com/cielolabsbr/SampleAutomacaoComercial1.2">GitHub</a>.</p>
 
 <h1 id="integração-local">Integração Local</h1>
 
