[df304bea92eab5c2619c7cc6651eaed8053ff360]: ADD - Fluxo - Integração Remota

--- a/manual/manual-de-integração.html
+++ b/manual/manual-de-integração.html
@@ -444,6 +444,10 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <p>O código do exemplo da Automação Comercial integrada com a API Order Manager da Cielo LIO encontra-se disponível no <a href="https://github.com/cielolabsbr/SampleAutomacaoComercial1.2">GitHub</a>.</p>
 
+<h2 id="fluxo-para-integração">Fluxo para Integração</h2>
+
+<p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/fluxogram-remote-new.png" alt="fluxo integração remota" /></p>
+
 <h1 id="integração-local">Integração Local</h1>
 
 <h2 id="apresentação-1">Apresentação</h2>
