[a4881f7f273b09aa4df030424bed9d722e704aad]: Updated '_i18n/pt/_posts/api-cielo/2003-03-03-FAQ-API-3.0.md' via CloudCannon

--- a/faq/faq-api-3-0.html
+++ b/faq/faq-api-3-0.html
@@ -367,14 +367,37 @@ Cada meio de pagamento possui diferentes status, podendo variar em relação a i
 <h2 id="1-quais-features-precisam-ser-habilitadas-pela-cielo-para-utilização-na-api-cielo-ecommerce-em-produção">1. Quais features precisam ser habilitadas pela Cielo para utilização na API Cielo eCommerce em produção?</h2>
 
 <p>Por padrão, cada lojista utilizando a API Cielo eCommerce deve solicitar ao Suporte Cielo a habilitação das seguintes funcionalidades:</p>
+
 <ul>
   <li>Recorrência</li>
   <li>Antifraude</li>
+  <li>Zero Auth</li>
+  <li>Consulta Bins</li>
+  <li>Velocity</li>
+  <li>Retentativa</li>
 </ul>
 
 <h2 id="2-quais-features-estão-disponíveis-em-sandbox">2. Quais Features estão disponíveis em sandbox?</h2>
 
-<p>Todas as features disponíveis em produção estão disponíveis no Sandbox a exceção do portal do lojista, disponível exclusivamente em produção, no site cielo.</p>
+<p>Features Disponiveis em Sandbox:</p>
+
+<ul>
+  <li>Transações com todos os meios de pagamento</li>
+  <li>Tokenização de cartões</li>
+  <li>Recorrência</li>
+  <li>Zero Auth</li>
+  <li>Consulta Bins</li>
+</ul>
+
+<p>Features Não Disponiveis em Sandbox:</p>
+
+<ul>
+  <li>Antifraude</li>
+  <li>Velocity</li>
+  <li>Retentativa</li>
+  <li>Boletos Registrados</li>
+  <li>Backoffice</li>
+</ul>
 
 <h1 id="recorrência">Recorrência</h1>
 
