[0da801bc3734af351d48db4f90e2eaaf625acdf4]: Updated '_i18n/pt/_posts/api-cielo/2003-03-03-Cielo-eCommerce.md' via CloudCannon

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -13901,6 +13901,17 @@ Para utilizar carteiras na API Cielo eCommerce, o lojista deverá possuir as car
   </tbody>
 </table>
 
+<h1 id="sdks">SDKs</h1>
+
+<p>A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório oficial CIELO:</p>
+
+<p>[Android] (https://github.com/DeveloperCielo/API-3.0-Android)
+[iOS] (https://github.com/DeveloperCielo/API-3.0-iOS)
+[PHP] (https://github.com/DeveloperCielo/API-3.0-PHP)
+[JAVA] (https://github.com/DeveloperCielo/API-3.0-Java)
+[Python] (https://github.com/DeveloperCielo/API-3.0-Python)
+[Ruby] (https://github.com/DeveloperCielo/API-3.0-Ruby)</p>
+
 </div>
 
 
