--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -13905,12 +13905,33 @@ Para utilizar carteiras na API Cielo eCommerce, o lojista deverá possuir as car
 
 <p>A API Cielo Ecommerce oferece uma gama de SDks disponiveis no Repositório oficial CIELO:</p>
 
-<p>[Android] (https://github.com/DeveloperCielo/API-3.0-Android)
-[iOS] (https://github.com/DeveloperCielo/API-3.0-iOS)
-[PHP] (https://github.com/DeveloperCielo/API-3.0-PHP)
-[JAVA] (https://github.com/DeveloperCielo/API-3.0-Java)
-[Python] (https://github.com/DeveloperCielo/API-3.0-Python)
-[Ruby] (https://github.com/DeveloperCielo/API-3.0-Ruby)</p>
+<table>
+  <thead>
+    <tr>
+      <th>SDK</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Android"><strong>Android</strong></a></td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-iOS"><strong>iOS</strong></a></td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-PHP"><strong>PHP</strong></a></td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Java"><strong>JAVA</strong></a></td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Python"><strong>Python</strong></a></td>
+    </tr>
+    <tr>
+      <td><a href="https://github.com/DeveloperCielo/API-3.0-Ruby"><strong>Ruby</strong></a></td>
+    </tr>
+  </tbody>
+</table>
 
 </div>
 
