--- a/404.html
+++ b/404.html
@@ -67,7 +67,7 @@
                 </li>
             
                 <li class="doc-title">
-                    <a href="/faq/faq-api-3-0-copy">FAQ</a>
+                    <a href="/faq/faq-cielolio">FAQ</a>
                 </li>
             
                 <li class="doc-title">
