[b14ff88b6b9b63a2627987327985640922f00afb]: Moved '_i18n/pt/_posts/CieloLIO/2017-01-01-Manual de integra\303\247\303\243o.md' to '_i18n/pt/_posts/CieloLIO/2017-01-01-CieloLio.md' via CloudCannon

--- a/404.html
+++ b/404.html
@@ -113,7 +113,7 @@
             <ul class="doc">
             
                 <li class="doc-title">
-                    <a href="/manual/manual-de-integra%C3%A7%C3%A3o">Manual de integração</a>
+                    <a href="/manual/cielolio">Manual de integração</a>
                 </li>
             
             </ul>
