[f85f709efe91a0f10dc001289ab537d31b971693]: Add API Docs

--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -448,6 +448,14 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <p><img src="https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/fluxogram-remote-new.png" alt="fluxo integração remota" /></p>
 
+<h2 id="api-docs">API Docs</h2>
+
+<p>Nessa documentação, o desenvolvedor encontra todas as informações sobre os Endpoints, Entidades e Recursos disponíveis na API.</p>
+
+<p>Você poderá consultar os dados de entrada, exemplos de requisição e os dados de saída. Assim como entender o fluxo básico da utilização da API Order Manager da Cielo LIO.</p>
+
+<p>Todas as chamadas devem ser executadas utilizando as respectivas credenciais dos ambientes de sandbox e produção.</p>
+
 <h1 id="integração-local">Integração Local</h1>
 
 <h2 id="apresentação-1">Apresentação</h2>
