--- a/manual/cielolio.html
+++ b/manual/cielolio.html
@@ -454,7 +454,37 @@ O recurso de rotação de exibição na Cielo LIO (ambas versões) é desativado
 
 <p>Você poderá consultar os dados de entrada, exemplos de requisição e os dados de saída. Assim como entender o fluxo básico da utilização da API Order Manager da Cielo LIO.</p>
 
+<h3 id="endpoints">Endpoints</h3>
+
 <p>Todas as chamadas devem ser executadas utilizando as respectivas credenciais dos ambientes de sandbox e produção.</p>
+
+<p><strong>Sandbox</strong>
+O ambiente de sandbox é destinado à realização de testes com parceiros da Cielo. Esse ambiente usa simuladores de integração. Assim, as operações não são executadas em ambiente produtivo.</p>
+
+<p>Para utilizar o ambiente de sandbox, não é necessário que você forneça o número do estabelecimento. Você poderá iniciar os testes sem a necessidade de ter uma Cielo LIO. Para obter os tokens de sandbox, crie uma conta no portal e crie o Client-Id.</p>
+
+<p>Utilize o endereço de sandbox abaixo para realizar os testes:</p>
+
+<blockquote>
+  <p>https://api.cielo.com.br/sandbox-lio/order-management/v1</p>
+</blockquote>
+
+<p><strong>Produção</strong>
+O ambiente de produção é o ambiente transacional integrado ao ambiente da Cielo. As operações realizadas nesse ambiente não podem ser desfeitas.</p>
+
+<p>Para utilizar o ambiente de produção, é necessário que você entre em contato através do formulário. Juntamente com os dados pessoais, forneça o número do estabelecimento. Para utilizar o ambiente de produção, é necessário que você possua uma Cielo LIO.</p>
+
+<p>Utilize o endereço de produção abaixo para realizar as requisições:</p>
+
+<blockquote>
+  <p>https://api.cielo.com.br/order-management/v1</p>
+</blockquote>
+
+<p>Já fez os testes em sandbox e deseja solicitar os tokens?</p>
+
+<p>Clique em <a href="https://desenvolvedores.cielo.com.br/api-portal/content/solicitar-tokens-para-producao">Solicitar Tokens</a> ou acesse o menu “Desenvolvedor” no Portal de Desenvolvedores e escolha a opção “Solicitar tokens”.</p>
+
+<p>É necessário estar logado!</p>
 
 <h1 id="integração-local">Integração Local</h1>
 
